# spellkit

./: .gitignore  Gemfile  LICENSE  README.md  Rakefile  spellkit.gemspec
.github/workflows/: build.yml  ci.yml  release.yml
benchmark/: README.md  comparison_aspell.rb  comparison_hunspell.rb  performance.rb
ext/spellkit/: Cargo.toml  extconf.rb
ext/spellkit/src/: guards.rs  lib.rs  symspell.rs
lib/: spellkit.rb
lib/spellkit/: version.rb
sig/: spellkit.rbs
spec/: canonical_forms_spec.rb  dictionary_loading_spec.rb  dictionary_validation_spec.rb  guards_spec.rb  hot_reload_spec.rb  manifest_spec.rb  multiple_instances_spec.rb  performance_spec.rb  refactored_correction_spec.rb  skip_patterns_spec.rb  spec_helper.rb  spellkit_spec.rb  symspell_core_spec.rb
spec/fixtures/: edge_cases.tsv  malformed_dictionary.tsv  protected.txt  species.txt  symbols.txt  symspell.json  test_unigrams.tsv
